HACK-367 #comment fixed header on small tab/mobile

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -163,7 +163,7 @@ MEDIA QUERIES
     .perks-cell {
         position: relative; 
         width: 300px; 
-        height: 300px; 
+        height: 301px; 
         margin: 30px; 
         float: left; 
     }
@@ -218,7 +218,7 @@ MEDIA QUERIES
 
     .linkedin-sprite {
         background: url('../assets/img/social-media-icons.png') no-repeat; 
-        background-position: -68.486px -63.511px;
+        background-position: -67.486px -63.511px;
     }
 
     .linkedin-sprite:hover {
@@ -1054,6 +1054,10 @@ MEDIA QUERIES
         width: 31em; 
     }
     
+    .b-page-header-section {
+        display: none;
+    }
+
     .logo img { 
         width: 76%; 
         max-height: none; 
